Aula de classe interface

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /25-04/build/
 /25-04/nbproject/private/
+/29-04_AulaClasseInterface/nbproject/private/
+/28-04_AtividadeClasseAbstrata/build/
+/28-04_AtividadeClasseAbstrata/nbproject/private/
+/AulaClasseInterface/nbproject/private/
+/AulaClasseInterface/build/
