design pattern - observer

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /28-04_AtividadeClasseAbstrata/nbproject/private/
 /AulaClasseInterface/nbproject/private/
 /AulaClasseInterface/build/
+/06-05_Aula_ArrayList/nbproject/private/
+/06-05_Aula_ArrayList/build/
+/Trab_Observer_Pattern/nbproject/private/
+/Trab_Observer_Pattern/build/
